<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/name_label" />

    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/details_label" />

    <EditText
        android:id="@+id/task_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint_details" />

    <EditText
        android:id="@+id/task_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:autofillHints=""
        android:inputType="date" />

    <CheckBox
        android:id="@+id/task_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/done_label"
        style="@style/Orangecheckbox"/>
    <Spinner
        android:id="@+id/task_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>